[package]
name = "untools"
version = "1.0.1"
edition = "2021"
authors = ["Code0408"]
description = "A simple and user-friendly underscore variable naming tool."
license = "MIT"
keywords = ["rust", "camelcase", "snakecase"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[source.crates-io]
registry = "https://github.com/rust-lang/crates.io-index"

replace-with = 'crates-io'

[dependencies]
